# EAE_Firmware

./: .gitignore  .yamllint.yml  CHANGELOG.md  CI_CD_TEST_RESULTS.md  CI_RESULTS_GUIDE.md  CMakeLists.txt  CPPLINT.cfg  README.md  REVIEWER_QA.md  SLACK_SETUP.md  TEST_RESULTS.md  THEORY_OF_OPERATION.md  THEORY_OF_OPERATION_PYTHON.md  WORKFLOW_FAILURE_ANALYSIS.md  add_copyright.sh  build.sh  cooling_control.cpp  cooling_control.py  copy_to_matlab_drive.sh  test_cooling_control.py  test_timing  test_timing.cpp
.claude/: project_techniques.md  session_checkpoint.md
.github/: dependabot.yml  pull_request_template.md
.github/linters/: .markdown-lint.yml  .markdownlint.yml  .yamllint.yml  CPPLINT.cfg
.github/workflows/: ci.yml  coverage.yml  release.yml
include/: canbus_simulator.h  cooling_system.h  pid_controller.h  state_machine.h
matlab_project/EAE_ThermalControl/: LAB_REPORT.md  README.md  startup.m
matlab_project/EAE_ThermalControl/results/: 2025-08-07_23-11-58_console_output.txt
matlab_project/EAE_ThermalControl/scripts/: advanced_control_methods.m  create_thermal_model.m  load_default_parameters.m  optimize_pid_parameters.m  run_analysis_with_saving.m  save_figure_helper.m  save_results_and_plots.m  test_plot_saving.m  thermal_system_analysis.m  ziegler_nichols_tuning.m
src/: canbus_simulator.cpp  cooling_system.cpp  main.cpp  pid_controller.cpp  state_machine.cpp
tests/: test_canbus.cpp  test_canbus_issue16.cpp  test_main.cpp  test_pid.cpp  test_state_machine.cpp
wiki/: Advanced_Control_Methods.md
(+9 files in other folders)
